<resources>
    <string name="app_name">BeePoll</string>

    <!--  -->
    <string name="logo">Surbee</string>
    <string name="hello_world">Hello world!</string>
    <string name="sur">Sur</string>
    <string name="bee">Bee</string>
    <string name="slogan">App del encuestador</string>
    <string name="email_label">Ingrese su correo electrónico</string>
    <string name="textEmail">ejemplo@correo.com</string>
    <string name="btn_submit">Entrar</string>
    <string name="Instrucciones">Para obtener acceso a las encuestas, pida al administrador de su proyecto que lo agregue como encuestador.</string>
    <string name="action_settings">Settings</string>
    <string name="open_drawer">Menú abierto</string>
    <string name="close_drawer">Menú cerrado</string>
    <string name="encuestas">Encuestas</string>
    <string name="borradores">Borradores</string>
    <string name="salida">Bandeja de salida</string>
    <string name="config">Configuración</string>
    <string name="ayuda">Ayuda</string>
    <string name="sync">SINCRONIZAR</string>
    <string name="title_activity_portada_encuesta">ENCUESTAS</string>
    <string name="titulo_encuesta">Connor/Davison CD-Risk (10)</string>
    <string name="descrip_encuesta">Translated and validated in spanish by Antunes et al. (2012) Chile http://www.redalyc.org/pdf/785/78524692005.pdf http://www2.psy.unsw.edu.au/dass/Spanish/-DASS21_Spanish_Daza.doc </string>
    <string name="aplicaciones">Número de aplicaciones</string>
    <string name="envios">Número de envios</string>
    <string name="btn_empezar">CONTESTAR</string>
    <string name="btn_regesar">VOLVER AL MENÚ</string>
    <string name="prev_btn">REGRESAR</string>
    <string name="next_btn">SIGUIENTE</string>
    <string name="title_activity_create_user">CreateUser</string>
    <string name="helpEnc">Encuestas</string>
    <string name="helpBor">Borradores</string>
    <string name="helpSal">Bandeja de Salida</string>
    <string name="helpConf">Configuracion</string>
    <string name="title_activity_ayuda">Ayuda</string>
    <string name="title_activity_help_txt">helpTxt</string>
    <string name="title_activity_help_info">helpInfo</string>
    <string name="title_activity_configuracion">Configuración</string>
    <string name="resp">(Respuestas)</string>
    <string name="titleItem"> Title Item </string>
    <string name="idEdo"> Id Edo </string>
    <string name="tPruena"> Texto </string>
    <string name="comenzar"> COMENZAR </string>
    <string name="noID"> NO ID </string>
    <string name="idEnc"> ID Enc </string>
    <string name="tItem"> Texto Item </string>
    <string name="NombreEdo">Nombre Encuestado</string>
    <string name="FechaEdo">Fecha Nacimiento Encuestado</string>
    <string name="Apellidos">Apellidos </string>
    <string name="mText"> Medium Text </string>
    <string name="DescItem"> Descripción del item </string>
    <string name="DATOSENCUESTADO">Datos Encuestado</string>
    <string name="VOLVERMENU"> VOLVER AL MENÚ </string>
    <string name="NText">Texto</string>
    <string name="Nombres">Nombre(s)</string>
    <string name="REGRESAR">REGRESAR</string>
    <string name="SEGUIR">SEGUIR</string>
    <string name="CONTESTAR">CONTESTAR</string>
    <string name="cero">0</string>
    <string name="Selfecha">Seleccionar Fecha</string>
    <string name="edoCivil">Estado Civil</string>
    <string name="Sexo">Sexo</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="tPrueba">Texto de prueba</string>

    <!-- -->
    <string name="Encuestas">fEncuestas</string>
    <string name="Borradores">fBorradores</string>
    <string name="Enviados">fEnviados</string>
    <string name="Bandeja">fBandeja</string>
    <string name="Configuracion">fConfiguracion</string>
    <string name="contenido">contenido</string>
    <string name="button_send">Continuar</string>
    <string name="title_encuesta">Large Text</string>
    <string name="proyect_encuesta">Medium Text</string>
    <string name="desc_encuesta">Small Text</string>
    <string name="edoTitle">Encuestado Nuevo</string>
    <string name="sendTextdate">Medium Text</string>
    <string name="none">none</string>
    <string name="bar">yellow bar</string>
    <string name="sexfem">Mujer</string>
    <string name="mediu">Medium Text</string>
    <string name="text">Large Text</string>
    <!--<string-array name="navDrawerItems">-->
        <!--<item>Home</item>-->
        <!--<item>fragment1</item>-->
        <!--<item>fragment2</item>-->
    <!--</string-array>-->
</resources>
