<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:orientation="horizontal"
                android:id="@+id/create_user_content"
                android:visibility="visible">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/titulo_create_user"
                    android:text="@string/DATOSENCUESTADO"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    tools:ignore="UnusedAttribute" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/apellidos"
                    android:text="@string/Apellidos"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:visibility="invisible" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/apellidos_text"
                    android:textColor="@color/white"
                    android:inputType="text"
                    android:visibility="invisible"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nombres"
                    android:text="@string/Nombres"
                    android:layout_marginTop="17dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:visibility="invisible" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nombres_text"
                    android:textColor="@color/white"
                    android:inputType="text"
                    android:visibility="invisible" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/fechaLabel"
                    android:text="@string/FechaEdo"
                    android:layout_marginTop="17dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:visibility="invisible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/fecha_container">

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Selfecha"
                        android:id="@+id/btDate"
                        android:visibility="invisible" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edoCivil"
                    android:text="@string/edoCivil"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:visibility="invisible" />


                <EditText
                    android:layout_width="287dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/edoCivilText"
                    android:inputType="none"
                    android:visibility="visible"
                    android:textColor="@color/white" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rg_label"
                    android:text="@string/Sexo"
                    android:layout_marginTop="17dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:visibility="invisible" />
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rg_container"
                    android:measureWithLargestChild="false"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/masc"
                        android:text="@string/hombre"
                        android:layout_weight="0.5"
                        android:elegantTextHeight="true"
                        android:layout_gravity="right"
                        android:textColor="@color/white"
                        android:visibility="invisible"
                        tools:ignore="UnusedAttribute" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/fem"
                        android:text="@string/mujer"
                        android:checked="false"
                        android:layout_weight="0.5"
                        android:textColor="@color/white"
                        android:visibility="invisible" />

                </RadioGroup>



            </LinearLayout>
        </ScrollView>
    </TableRow>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btFAB"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="15dp"
        android:layout_gravity="left|bottom"
        android:src="@mipmap/ic_action_next_item"
        app:elevation="6dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="26dp" />
</RelativeLayout>