<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="5dp"
        android:layout_height="85dp"
        android:id="@+id/imageView"
        android:background="@color/yellow_bee"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/ultima_fecha"
 />

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:state_focused="true"
        android:id="@+id/erase_btn"
        android:src="@mipmap/ic_action_discard"
        android:layout_alignTop="@+id/nombre_encuestado"
        android:visibility="invisible"
        tools:ignore="ContentDescription"
        android:layout_alignStart="@+id/erase_draft" />
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:state_focused="true"
        android:id="@+id/erase_draft"
        android:src="@mipmap/ic_action_discard"
        android:visibility="invisible"
        tools:ignore="ContentDescription"
        android:layout_marginEnd="37dp"
        android:layout_alignTop="@+id/nombre_encuestado"
        android:layout_toStartOf="@+id/continue_btn" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:paddingBottom="1dp"
        android:id="@+id/id_encuestado"
        android:text="@string/idEdo"
        android:paddingLeft="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/nombre_encuestado"
        android:layout_alignStart="@+id/nombre_encuestado"
        android:maxLength="25" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:paddingBottom="1dp"
        android:id="@+id/idEnc"
        android:text="@string/idEnc"
        android:paddingLeft="10dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/id_encuestado"
        android:layout_toEndOf="@+id/id_encuestado"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_content"
        android:paddingBottom="5dp"
        android:id="@+id/nombre_encuestado"
        android:paddingLeft="10dp"
        android:text="@string/NombreEdo"
        android:layout_below="@+id/id_encuestado"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="45dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_content"
        android:id="@+id/ultima_fecha"
        android:paddingLeft="10dp"
        android:text="@string/FechaEdo"
        android:layout_below="@+id/nombre_encuestado"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="45dp" />
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginRight="26dp"
        android:state_focused="true"
        android:id="@+id/continue_btn"
        android:src="@mipmap/ic_action_send_now"
        android:layout_alignTop="@+id/nombre_encuestado"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="26dp"
        android:visibility="invisible"
        tools:ignore="ContentDescription" />
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginRight="26dp"
        android:state_focused="true"
        android:id="@+id/edit_btn"
        android:src="@mipmap/ic_action_edit"
        android:layout_alignTop="@+id/nombre_encuestado"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="26dp"
        android:visibility="invisible"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sendTextdate"
        android:id="@+id/tvDateSend"
        android:visibility="invisible"
        android:layout_alignBottom="@+id/imageView"
        android:layout_toStartOf="@+id/erase_btn" />

</RelativeLayout>