<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/surbee_blue"
    tools:ignore="Overdraw">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="111dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo_beepoll_01"
        android:id="@+id/logo_survey"
        android:contentDescription="@string/logo"
        android:layout_alignWithParentIfMissing="false"
        android:layout_marginTop="26dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"/>

    <EditText
        android:layout_width="333dp"
        android:layout_height="45dp"
        android:background="@color/white"
        android:id="@+id/email_holder"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo_survey"
        android:hint="Correo electrónico"
        android:focusableInTouchMode="true"
        android:paddingLeft="90dp"
        android:paddingRight="40dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@color/btn_submit"
        android:textColor="@color/white"
        android:text="@string/btn_submit"
        android:id="@+id/button_submit"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:padding="2dp"
        android:paddingTop="2dp"
        android:layout_below="@+id/email_holder"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="27dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/Instrucciones"
        android:id="@+id/instruccciones"
        android:layout_below="@+id/button_submit"
        android:layout_alignEnd="@+id/email_holder"
        android:layout_alignStart="@+id/email_holder" />

    <ImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:id="@+id/imageView2"
        android:src="@drawable/ayuda_icon"
        android:layout_alignBottom="@+id/instruccciones"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/button_submit" />

</RelativeLayout>